@@ -1,6 +1,7 @@
 2021.??.??
   * Added support for ptpimg.me
   * bB: Added --anime option
+  * Speedier detection of first video file in season packs
 
 
 2021.06.22
